--- a/style.css
+++ b/style.css
@@ -53,10 +53,11 @@ body{
 .container{
     width: 100vw;
     height: 100vh;
-    background-color: yellow;
+    background-color: ;
     overflow-y: auto;
     padding-top: 7rem;
     padding-left: 20rem;
+    padding-bottom: 7rem;
 }
 
 .bottom-nav{
@@ -72,27 +73,49 @@ body{
 .main-list{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     list-style:none;
-    margin-top: 30px;
 }
 
 .main-list li{
     margin-inline:30px ;
     color: var(--text);
+    margin-top: 30px;
 }
 
 .main-list li a{
     text-decoration: none;
+    color: var(--text);
 }
 
 .row{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
     color: white;
     margin:40px 20px ;
 }
 
 .row h2{
     font-size: 35px;
+}
+
+.row .subtitle{
+    color: var(--text);
+    padding-top: 10px;
+}
+
+.row-cards{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 30px 30px 0;
+}
+
+.circle-img img{
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
 }
