--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{
 .side-nav{
     background-color:black;
     height: calc( 100vh - 7rem);
-    width: 20rem;
+    width: 14rem;
     position: fixed;
     left: 0;
     top: 0;
@@ -57,6 +57,9 @@ body{
     justify-content: space-between;
 }
 
+.logo-small{
+    display: none;
+}
 
 .logo-big{
     width: 70%;
@@ -75,8 +78,18 @@ body{
     padding-top: 15px;
 }
 
+.icone span span{
+    font-size: 20px;
+    vertical-align: text-top;
+}
+
 .icone span:first-child{
     color: white;
+}
+
+.icone span img{
+    width: 30px;
+
 }
 
 .playlist{
@@ -116,7 +129,7 @@ body{
     margin-right:10px ;
 }
 
-.content-bottom span{
+.content-bottom span:nth-child(odd){
     display: flex;
     margin-bottom: 10px;
 }
@@ -165,7 +178,7 @@ hr{
     height: 100vh;
     overflow-y: auto;
     padding-top: 7rem;
-    padding-left: 20rem;
+    padding-left: 14rem;
     padding-bottom: 7rem;
 }
 
@@ -213,8 +226,7 @@ hr{
     border-radius: 50%;
 }
 
-
-
+/* player */
 .bottom-nav{
     background-color: var(--gray);
     height: 7rem;
@@ -247,11 +259,42 @@ hr{
 
 @media (max-width:600px) {
     .side-nav{
-        width: 6rem;
+        width: 4rem;
+        display: flex;
+        padding-left: 0;
     }
 
     .container{
-        padding-left: 6rem;
+        padding-left: 4rem;
     }
 
+    .hidden{
+        display: none;
+    }
+
+    .logo-small{
+        display: block;
+        width: 40px;
+    }
+
+    .content-top{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
+    }
+
+    .profile img{
+        margin-right: 0;
+    }
+
+    .install img{
+        margin-right: 4px;
+    }
+
+    .content-bottom{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
