--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
     align-items: center;
     justify-content: end;
     position: fixed;
+    z-index: 997;
     right: 0;
     left: 0rem;
 }
@@ -47,6 +48,7 @@ body{
     height: calc( 100vh - 6rem);
     width: 14rem;
     position: fixed;
+    z-index: 999;
     left: 0;
     top: 0;
     bottom: 0;
@@ -216,28 +218,28 @@ hr{
     flex-direction: column;
     align-items: center;
     width: 100%;
-    position: relative;
+}
+
+.hidden-container{
+    position: relative; 
 }
 
 .play-hidden{
-   /* display: none;  */
-   /* position: absolute;
-   font-size: 100px;
-   left: 50%;
-   top: 50%;
-   transform: translate(-50%, -50%);
-   z-index: 5; */
-   position: absolute;
-   font-size: 100px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   z-index: 4;
+    z-index: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(20,25,34,0.7);
+    position: absolute;
+    font-size: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: -1;
 }
 
 .card img, .card-circle img{
     width: 100%;
-    /* position: relative; */
 }
 
 .card h3{
@@ -258,6 +260,7 @@ hr{
     background-color: var(--gray);
     height: 6rem;
     position: fixed;
+    z-index: 998;
     left: 0;
     right: 0;
     bottom: 0;
@@ -363,8 +366,8 @@ ul li a:hover{
     cursor: pointer;
 }
 
-.play-hidden:hover{
-    display: block;
+.hidden-container:hover .play-hidden{
+    z-index: 0;
 }
 
 /* media */
