--- a/style.css
+++ b/style.css
@@ -91,7 +91,10 @@ body{
 
 .icone span img{
     width: 30px;
+}
 
+.icone span:first-child img{
+    border-left: 5px solid var(--green);
 }
 
 .playlist{
@@ -333,8 +336,26 @@ hr{
     left: 0;
     bottom: 0;
     background-color: white;
-    width: 60%;
-    height: 6px;
+    width: 40%;
+    height: 4px;
+}
+
+.dot{
+    display: none;
+    height: 10px;
+    width: 10px;
+    background-color: white;
+    border-radius: 50%;
+    vertical-align: middle;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    transform: translatey(-30%);    
+}
+
+.volume-container{
+    position: relative;
 }
 
 /* content right */
@@ -360,7 +381,7 @@ hr{
 
 /* effetti */
 .upgrade-btn button:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 ul li a:hover{
@@ -370,6 +391,10 @@ ul li a:hover{
 
 .icone>:hover{
     color: white;
+}
+
+.icone span:hover img{
+    border-left: 5px solid var(--green);
 }
 
 .playlist span:hover, .playlist ul li:hover ,.content-bottom span:hover{
@@ -385,10 +410,21 @@ ul li a:hover{
     z-index: 0;
 }
 
+.fa-circle-play:hover{
+    transform: scale(1.2);
+}
+
 .card:hover{
     cursor: pointer;
 }
 
+.line-color:hover{
+    background-color: var(--green);
+}
+
+.line-color:hover .dot{
+    display:block;
+}
 /* media */
 
 
@@ -400,7 +436,7 @@ ul li a:hover{
 }
 
 
-@media (max-width:830px) {
+@media (max-width:879px) {
     .cell{
         width:calc(100% / 2 );
     }
