--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body{
 
 .playlist ul li{
     list-style: none;
-    padding-top: 25px;
+    padding: 15px 0 15px 0;
 }
 
 .install{
@@ -397,8 +397,13 @@ ul li a:hover{
     border-left: 5px solid var(--green);
 }
 
-.playlist span:hover, .playlist ul li:hover ,.content-bottom span:hover{
+.content-bottom span:hover{
     color: white;
+}
+
+.playlist span:hover,.playlist ul li:hover{
+    color: white;
+    border-left: 5px solid var(--green);
 }
 
 .title-playing>:hover, .icon-playing i:hover{
@@ -420,11 +425,13 @@ ul li a:hover{
 
 .line-color:hover{
     background-color: var(--green);
+    cursor: pointer;
 }
 
 .line-color:hover .dot{
     display:block;
 }
+
 /* media */
 
 
