--- a/style.css
+++ b/style.css
@@ -221,6 +221,7 @@ hr{
     flex-direction: column;
     align-items: center;
     width: 100%;
+    text-align: center;
 }
 
 .hidden-container{
@@ -228,8 +229,8 @@ hr{
 }
 
 .play-hidden{
-    z-index: 0;
     display: none;
+    max-width: 100%;
     width: 100%;
     height: 100%;
     background-color: rgba(20,25,34,0.7);
@@ -384,9 +385,17 @@ hr{
     transform: scale(1.1);
 }
 
-ul li a:hover{
-    text-decoration: underline;
-    color: var(--green);
+.main-list li:hover::after{
+    content: "";
+    display: block;
+    width: 40%;
+    height: 5px;
+    margin:5px auto;
+    background-color: var(--green);
+}
+
+.main-list li a:hover{
+    color: white
 }
 
 .icone>:hover{
@@ -468,6 +477,14 @@ ul li a:hover{
     .logo-small{
         display: block;
         width: 40px;
+    }
+
+    .icone span:first-child img{
+        border-left: 0px;
+    }
+
+    .play-hidden{
+        display: none;
     }
 
     .content-top{
