--- a/style.css
+++ b/style.css
@@ -93,8 +93,40 @@ body{
     width: 30px;
 }
 
-.icone span:first-child img{
-    border-left: 5px solid var(--green);
+.icone span:nth-child(1)::before{
+    content: "";
+    display: block;
+    background-color: var(--green);
+    position: absolute;
+    left: 0px;
+    top: 102px;
+    width: 5px;
+    height: 30px;
+    color: var(--green);
+}
+
+.icone span:nth-child(2)::before{
+    content: "";
+    display: block;
+    background-color: var(--green);
+    position: absolute;
+    left: 0px;
+    top: 152px;
+    width: 5px;
+    height: 30px;
+    color: var(--green);
+}
+
+.icone span:nth-child(3)::before{
+    content: "";
+    display: block;
+    background-color: var(--green);
+    position: absolute;
+    left: 0px;
+    top: 202px;
+    width: 5px;
+    height: 30px;
+    color: var(--green);
 }
 
 .playlist{
@@ -402,17 +434,17 @@ hr{
     color: white;
 }
 
-.icone span:hover img{
+/* .icone span:hover:not(:first-child) img{
+    border-left: 5px solid var(--green);
+} */
+
+.playlist span:hover,.playlist ul li:hover{
+    color: white;
     border-left: 5px solid var(--green);
 }
 
 .content-bottom span:hover{
     color: white;
-}
-
-.playlist span:hover,.playlist ul li:hover{
-    color: white;
-    border-left: 5px solid var(--green);
 }
 
 .title-playing>:hover, .icon-playing i:hover{
