--- a/style.css
+++ b/style.css
@@ -94,18 +94,18 @@ body{
     width: 30px;
 }
 
-/* .icone span:before{
+.icone .fix:before{
     content: "";
     display: block;
     background-color: var(--green);
     position: absolute;
-    left: -57px;
-    top: 10px;
+    left: -20px;
+    top: 15px;
     width: 5px;
     height: 30px;
-} */
+}
 
-.icone:not(:first-child) span:hover::before{
+.icone span:hover::before{
     content: "";
     display: block;
     background-color: var(--green);
