--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body{
     height: 30px;
 }
 
-.icone span:hover::before{
+/* .icone span:hover::before{
     content: "";
     display: block;
     background-color: var(--green);
@@ -114,6 +114,23 @@ body{
     top: 10px;
     width: 5px;
     height: 30px;
+} */
+
+.icone .green-line:before, 
+.icone span:hover::before {
+    content: "";
+    display: block;
+    background-color: var(--green);
+    position: absolute;
+    left: -20px;
+    top: 15px;
+    width: 5px;
+    height: 30px;
+}
+.icone span:not(.green-line)::before{
+    left: -57px;
+    top: 10px;
+    width: 5px;
 }
 
 .playlist{
