--- a/style.css
+++ b/style.css
@@ -443,7 +443,7 @@ hr{
     transform: scale(1.1);
 }
 
-.main-list li:hover::after{
+.main-list li:not(:first-child) a:hover::after{
     content: "";
     display: block;
     width: 40%;
